--- a/css/style-una.css
+++ b/css/style-una.css
@@ -63,7 +63,7 @@ h1 {
         }
 
 #image-container {
-    position: absolute; bottom: 0; left: 0; right: 0;
+    position: absolute; top: 0px; left: 0px;
     font-size: 0;
     text-align: center;
     z-index: 1;
@@ -72,7 +72,7 @@ h1 {
 
     #image-container img {
         width: auto; 
-        height: calc(100vh);
+        height: 100%;
         z-index: 1;
     }
 
