--- a/css/style-una.css
+++ b/css/style-una.css
@@ -67,6 +67,8 @@ h1 {
     font-size: 0;
     text-align: center;
     z-index: 1;
+    height: 100%;
+    width:100%;
 
 }
 
@@ -74,6 +76,7 @@ h1 {
         width: auto; 
         height: 100%;
         z-index: 1;
+        max-width: 100%;
     }
 
 @media only screen
